--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicDashboard.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicDashboard.module.css
@@ -41,6 +41,13 @@
   left: 0px;
   overflow: hidden;
 }
+
+.dynamicSection {
+  position: relative;
+  top: 0px;
+  width: 300px;
+}
+
 .container1 {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 0px 0.5px rgba(22, 25, 30, 0.07))
@@ -52,6 +59,7 @@
   left: 268px;
   right: 0px;
 }
+
 .svg__m6Bdn {
   object-fit: cover;
   max-width: 100vw;
@@ -163,7 +171,7 @@
   height: 40px;
   display: block;
   position: absolute;
-  top: 0px;
+  top: 10px;
   left: 0px;
   overflow: hidden;
   border-radius: 4px;
