--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicDinaggregation.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicDinaggregation.module.css
@@ -20,9 +20,20 @@
 }
 .root > * {
   grid-column: 4;
+  width: 100vw;
 }
+
+.dynamicSection {
+  position: relative;
+  top: 100px;
+  left: 300px;
+  width: 300px;
+}
+
 .wireframe3 {
   background: rgba(255, 255, 255, 1);
+  position: relative;
+  left: 0px;
   width: 100vw;
   height: 1024px;
   display: block;
