--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicDinaggregation.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicDinaggregation.module.css
@@ -1,4 +1,4 @@
-.root {
+/* .root {
   display: grid;
   flex-direction: column;
   position: relative;
@@ -21,7 +21,7 @@
 .root > * {
   grid-column: 4;
   width: 100vw;
-}
+} */
 
 .dynamicSection {
   position: relative;
